--- a/apps/remix-blog-tutorial/package.json
+++ b/apps/remix-blog-tutorial/package.json
@@ -24,6 +24,7 @@
     "marked": "^4.0.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "theme-change": "^2.0.2",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
