--- a/apps/remix-jokes-app-cfp/package.json
+++ b/apps/remix-jokes-app-cfp/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "@apps/remix-jokes-app",
+  "name": "@apps/remix-jokes-app-cfp",
   "version": "0.0.0",
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "concurrently \"yarn:build:*\"",
+    "build": "run-p build:*",
     "build:remix": "remix build",
     "build:tw": "yarn tw -- --minify",
-    "dev": "concurrently \"yarn:dev:*\"",
-    "dev:remix": "PORT=3060 remix dev && yarn dev:tw",
+    "dev:remix": "remix watch",
     "dev:tw": "yarn tw --watch",
-    "start": "remix-serve build",
+    "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
+    "dev": "remix build && run-p dev:*",
     "tw": "tailwindcss -o app/styles/tailwind.css",
-    "setup": "prisma migrate dev && prisma db seed"
+    "start": "cross-env NODE_ENV=production npm run dev:wrangler"
   },
   "dependencies": {
-    "@remix-run/node": "^1.6.1",
-    "@remix-run/react": "^1.6.1",
-    "@remix-run/serve": "^1.6.1",
+    "@remix-run/cloudflare": "^1.6.0",
+    "@remix-run/cloudflare-pages": "^1.6.0",
+    "@remix-run/react": "^1.6.0",
+    "cross-env": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.6.1",
-    "@remix-run/eslint-config": "^1.6.1",
+    "@cloudflare/workers-types": "^3.10.0",
+    "@remix-run/dev": "^1.6.0",
+    "@remix-run/eslint-config": "^1.6.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
-    "concurrently": "^7.2.2",
     "daisyui": "^2.15.4",
     "eslint": "^8.15.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.3",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "wrangler": "beta"
   },
   "engines": {
     "node": ">=14"
