--- a/apps/remix-jokes-app/.gitignore
+++ b/apps/remix-jokes-app/.gitignore
@@ -15,7 +15,6 @@ node_modules
 /api/index.js
 /api/index.js.map
 
-/prisma/data.db
-/prisma/data.db-journal
+/prisma/dev.db
 
 /app/styles/tailwind.css
