--- a/apps/remix-jokes-app/package.json
+++ b/apps/remix-jokes-app/package.json
@@ -11,10 +11,11 @@
     "dev:remix": "PORT=3060 remix dev && yarn dev:tw",
     "dev:tw": "yarn tw --watch",
     "start": "remix-serve build",
-    "tw": "tailwindcss -o app/styles/tailwind.css",
+    "tw": "tailwindcss -i input.css -o app/styles/tailwind.css",
     "setup": "prisma migrate dev && prisma db seed"
   },
   "dependencies": {
+    "@prisma/client": "^3.15.2",
     "@remix-run/node": "^1.6.1",
     "@remix-run/react": "^1.6.1",
     "@remix-run/serve": "^1.6.1",
@@ -24,19 +25,24 @@
   "devDependencies": {
     "@remix-run/dev": "^1.6.1",
     "@remix-run/eslint-config": "^1.6.1",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.2.2",
     "daisyui": "^2.15.4",
+    "esbuild-register": "^3.3.3",
     "eslint": "^8.15.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
+    "prisma": "^3.15.2",
     "tailwindcss": "^3.1.3",
     "typescript": "^4.6.4"
   },
   "engines": {
     "node": ">=14"
+  },
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
   }
 }
