--- a/apps/remix-jokes-app/package.json
+++ b/apps/remix-jokes-app/package.json
@@ -19,6 +19,7 @@
     "@remix-run/node": "^1.6.1",
     "@remix-run/react": "^1.6.1",
     "@remix-run/serve": "^1.6.1",
+    "bcryptjs": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -26,6 +27,7 @@
     "@remix-run/dev": "^1.6.1",
     "@remix-run/eslint-config": "^1.6.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/bcryptjs": "^2.4.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "autoprefixer": "^10.4.7",
