--- a/apps/remix-jokes-app-cfp/package.json
+++ b/apps/remix-jokes-app-cfp/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "build": "run-p build:*",
     "build:remix": "remix build",
-    "build:tw": "yarn tw -- --minify",
+    "build:tw": "yarn tw --minify",
+    "dev": "remix build && run-p dev:*",
     "dev:remix": "remix watch",
     "dev:tw": "yarn tw --watch",
-    "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
-    "dev": "remix build && run-p dev:*",
-    "tw": "tailwindcss -o app/styles/tailwind.css",
-    "start": "cross-env NODE_ENV=production npm run dev:wrangler"
+    "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev --port=3070 ./public",
+    "tw": "tailwindcss -i input.css -o app/styles/tailwind.css",
+    "start": "cross-env NODE_ENV=production yarn dev:wrangler"
   },
   "dependencies": {
     "@remix-run/cloudflare": "^1.6.0",
@@ -31,14 +31,19 @@
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "daisyui": "^2.15.4",
+    "esbuild-register": "^3.3.3",
     "eslint": "^8.15.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
+    "prisma": "^3.15.2",
     "tailwindcss": "^3.1.3",
     "typescript": "^4.6.4",
     "wrangler": "beta"
   },
   "engines": {
     "node": ">=14"
+  },
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
   }
 }
