--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "remix-fire",
-  "description": "Remix playground",
+  "name": "remix-fire-tutorial",
+  "description": "Remix tutorial playground",
   "version": "0.0.0",
   "private": true,
   "repository": "https://github.com/JHSeo-git/remix-fire.git",
