--- a/apps/remix-jokes-app/package.json
+++ b/apps/remix-jokes-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@apps/remix-jokes-app",
+  "name": "@remix-fire-tutorial/remix-jokes-app",
   "version": "0.0.0",
   "private": true,
   "sideEffects": false,
